# learning

./: CMakeLists.txt  README.md  file_test.c  file_test.txt  getopt_long_test.c  modbus_test.c  msg_test.c  tcp_test.c  thread_test.c  udp_test.c  va_test.c
TDengine_test/: CMakeLists.txt  sync_query.c
http_test/: CMakeLists.txt  http_test.c  index.html
json_test/: CMakeLists.txt  main.c  wangmeng.json
json_test/cJSON/: Readme.txt  cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h
mongoose_test/: CMakeLists.txt  main.c
mongoose_test/html/: index.html
project_1/: CMakeLists.txt  file_wr.c  file_wr.h  main.c  udp.c  udp.h
sqlite3_test/: CMakeLists.txt  main.c
